--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <section class="d-flex align-items-center justify-content-center mt-3">
-    <div class="container card border border-0 rounded">
+    <div class="container card border border-0">
       <img src="./images/image-qr-code.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title fw-bolder text-center "> 
