fix html issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-  <section class="d-flex align-items-center justify-content-center mt-3">
+  <main class="d-flex align-items-center justify-content-center mt-3"  role="main">
     <div class="container card border border-0">
       <img src="./images/image-qr-code.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -25,6 +25,6 @@
         <p class="card-text text-center text-muted">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
-  </section>
+  </main>
 </body>
 </html>
