--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-  <main class="d-flex align-items-center justify-content-center mt-3"  role="main">
+  <main class="d-flex align-items-center justify-content-center mt-3">
     <div class="container card border border-0">
       <img src="./images/image-qr-code.png" class="card-img-top" alt="...">
       <div class="card-body">
